--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="/manifest.json">
     <script>
       // NOTE: process.env.API_KEY is a placeholder. 
       // You should replace it with your actual Gemini API key in a secure way.
       // For this environment, we'll hardcode it for demonstration.
       process = { 
         env: { 
-          API_KEY: "YOUR_GEMINI_API_KEY_HERE",
-          IMGBB_API_KEY: "YOUR_IMGBB_API_KEY_HERE" // Add your ImgBB API Key here
+          API_KEY: "AIzaSyAeb2edncoerHTPChZONYgG597bXSh7Z6Q",
+          // IMPORTANT: Replace this placeholder with your actual ImgBB API key.
+          // It is highly recommended to use environment variables for this in a production environment.
+          IMGBB_API_KEY: "bde613bd4475de5e00274a795091ba04"
         } 
       };
 
